# mithen

./: README.md  setup.cfg  usage.txt
src/mithen/: mithen.py
