[metadata]
name = mithen
version = 0.0.5
author = Berat Çimen
author_email = beratcmn@gmail.com
description = Krypton için geliştirilmiş bir eklenti paketi.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beratcmn/mithen
project_urls =
    Bug Tracker = https://github.com/beratcmn/mithen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src